# notes-graph

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  links.py  notes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  note.py
backend/app/schemas/: note.py
backend/app/services/: note_service.py
backend/migrations/: env.py
backend/migrations/versions/: 5f05678c2b4d_note_add_importance_0_9.py  f935372338b7_init_schema.py
